--- a/.github/workflows/testNX.yml
+++ b/.github/workflows/testNX.yml
@@ -11,7 +11,8 @@ jobs:
           fetch-depth: 0
       - uses: nrwl/nx-set-shas@v3
       - run: npm ci
-      - run: npx nx init
+      - run: npx create-nx-workspace@latest test
+
       - run: npx nx format:check
       - run: npx nx affected --target=lint --parallel=3
       - run: npx nx affected --target=test --parallel=3 --configuration=ci
